--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,11 @@
 [package]
 name = "plumber"
-version = "0.2.2"
+version = "0.3.2"
 edition = "2024"
 
 [dependencies]
 ssh2 = "0.9.5"
 rpassword = "7.4.0"
 clap = { version = "4.5.53", features = ["derive"] }
+serde_json = "1.0.149"
+ureq = "3.1.4"
